--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "pokedex",
 	"main": "server.js",
 	"dependencies": {
-		"express": "~4.1.1"
+		"express": "^4.17.1",
+		"mongoose": "^5.10.15"
 	}
 }
